--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -36,6 +36,7 @@ rules:
   - bmcs
   - bmcsecrets
   - endpoints
+  - oobmsettings
   - serverbootconfigurations
   - serverclaims
   - serverconfigurations
@@ -57,6 +58,7 @@ rules:
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - endpoints/finalizers
+  - oobmsettings/finalizers
   - serverbootconfigurations/finalizers
   - serverclaims/finalizers
   - servermaintenances/finalizers
@@ -71,6 +73,7 @@ rules:
   - bmcs/status
   - bmcsecrets/status
   - endpoints/status
+  - oobmsettings/status
   - serverbootconfigurations/status
   - serverclaims/status
   - servermaintenances/status
