address review comments

--- a/config/rbac/serverclaim_editor_role.yaml
+++ b/config/rbac/serverclaim_editor_role.yaml
@@ -1,15 +1,13 @@
-# This rule is not used by the project metal-operator itself.
-# It is provided to allow the cluster admin to help manage permissions for users.
-#
-# Grants permissions to create, update, and delete resources within the metal.ironcore.dev.
-# This role is intended for users who need to manage these resources
-# but should not control RBAC or manage permissions for others.
-
+# permissions for end users to edit serverclaims.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: metal-operator
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/instance: serverclaim-editor-role
+    app.kubernetes.io/component: rbac
+    app.kubernetes.io/created-by: metal-operator
+    app.kubernetes.io/part-of: metal-operator
     app.kubernetes.io/managed-by: kustomize
   name: serverclaim-editor-role
 rules:
