--- a/config/rbac/serverbootconfiguration_viewer_role.yaml
+++ b/config/rbac/serverbootconfiguration_viewer_role.yaml
@@ -1,15 +1,13 @@
-# This rule is not used by the project metal-operator itself.
-# It is provided to allow the cluster admin to help manage permissions for users.
-#
-# Grants read-only access to metal.ironcore.dev resources.
-# This role is intended for users who need visibility into these resources
-# without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
-
+# permissions for end users to view serverbootconfigurations.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: metal-operator
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/instance: serverbootconfiguration-viewer-role
+    app.kubernetes.io/component: rbac
+    app.kubernetes.io/created-by: metal-operator
+    app.kubernetes.io/part-of: metal-operator
     app.kubernetes.io/managed-by: kustomize
   name: serverbootconfiguration-viewer-role
 rules:
