--- a/config/crd/bases/metal.ironcore.dev_servers.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servers.yaml
@@ -72,7 +72,7 @@ spec:
             properties:
               biosSettingsRef:
                 description: |-
-                  BIOSSettingsRef is a reference to a ServerBIOS object that specifies
+                  BIOSSettingsRef is a reference to a biossettings object that specifies
                   the BIOS configuration for this server.
                 properties:
                   name:
