--- a/config/rbac/biossettings_admin_role.yaml
+++ b/config/rbac/biossettings_admin_role.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.rbac.enable }}
 # This rule is not used by the project metal-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
@@ -10,19 +9,23 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    {{- include "chart.labels" . | nindent 4 }}
-  name: serverbios-admin-role
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/instance: biossettings-admin-role
+    app.kubernetes.io/component: rbac
+    app.kubernetes.io/created-by: metal-operator
+    app.kubernetes.io/part-of: metal-operator
+    app.kubernetes.io/managed-by: kustomize
+  name: biossettings-admin-role
 rules:
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - serverbios
+  - biossettings
   verbs:
   - '*'
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - serverbios/status
+  - biossettings/status
   verbs:
   - get
-{{- end -}}
