--- a/config/rbac/biossettings_editor_role.yaml
+++ b/config/rbac/biossettings_editor_role.yaml
@@ -1,33 +1,37 @@
 # This rule is not used by the project metal-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants read-only access to metal.ironcore.dev resources.
-# This role is intended for users who need visibility into these resources
-# without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
+# Grants permissions to create, update, and delete resources within the metal.ironcore.dev.
+# This role is intended for users who need to manage these resources
+# but should not control RBAC or manage permissions for others.
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: serverbios-viewer-role
+    app.kubernetes.io/instance: biossettings-editor-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: metal-operator
     app.kubernetes.io/part-of: metal-operator
     app.kubernetes.io/managed-by: kustomize
-  name: serverbios-viewer-role
+  name: biossettings-editor-role
 rules:
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - serverbios
+  - biossettings
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - serverbios/status
+  - biossettings/status
   verbs:
   - get
