--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -50,7 +50,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: BiosSettingsSpec defines the desired state of BIOSSettings.
+            description: BIOSSettingsSpec defines the desired state of BIOSSettings.
             properties:
               ServerMaintenancePolicyTemplate:
                 description: ServerMaintenancePolicy is maintenance policy to be enforced
@@ -136,7 +136,7 @@ spec:
                   rule: self == oldSelf
             type: object
           status:
-            description: BiosSettingsStatus defines the observed state of BIOSSettings.
+            description: BIOSSettingsStatus defines the observed state of BIOSSettings.
             properties:
               state:
                 description: State represents the current state of the bios configuration
