--- a/config/rbac/bmcsettings_editor_role.yaml
+++ b/config/rbac/bmcsettings_editor_role.yaml
@@ -1,9 +1,9 @@
 # This rule is not used by the project metal-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants full permissions ('*') over metal.ironcore.dev.
-# This role is intended for users authorized to modify roles and bindings within the cluster,
-# enabling them to delegate specific permissions to other users or groups as needed.
+# Grants permissions to create, update, and delete resources within the metal.ironcore.dev.
+# This role is intended for users who need to manage these resources
+# but should not control RBAC or manage permissions for others.
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -11,17 +11,23 @@ metadata:
   labels:
     app.kubernetes.io/name: metal-operator
     app.kubernetes.io/managed-by: kustomize
-  name: oobmsettings-admin-role
+  name: bmcsettings-editor-role
 rules:
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - oobmsettings
+  - bmcsettings
   verbs:
-  - '*'
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - oobmsettings/status
+  - bmcsettings/status
   verbs:
   - get
