--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -25,9 +25,9 @@ resources:
 - biosversion_admin_role.yaml
 - biosversion_editor_role.yaml
 - biosversion_viewer_role.yaml
-- oobmsettings_admin_role.yaml
-- oobmsettings_editor_role.yaml
-- oobmsettings_viewer_role.yaml
+- bmcsettings_admin_role.yaml
+- bmcsettings_editor_role.yaml
+- bmcsettings_viewer_role.yaml
 - servermaintenance_admin_role.yaml
 - servermaintenance_editor_role.yaml
 - servermaintenance_viewer_role.yaml
