Change ServerMaintenancePolicyTemplate to serverMaintenancePolicy

--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -52,10 +52,6 @@ spec:
           spec:
             description: BIOSSettingsSpec defines the desired state of BIOSSettings.
             properties:
-              ServerMaintenancePolicyTemplate:
-                description: ServerMaintenancePolicy is maintenance policy to be enforced
-                  on the server.
-                type: string
               biosSettings:
                 description: BIOSSettings specifies the BIOS settings for the selected
                   serverRef or serverSelector.
@@ -72,6 +68,10 @@ spec:
                 required:
                 - version
                 type: object
+              serverMaintenancePolicy:
+                description: ServerMaintenancePolicy is maintenance policy to be enforced
+                  on the server.
+                type: string
               serverMaintenanceRef:
                 description: ServerMaintenanceRef is a reference to a ServerMaintenance
                   object that that BIOS has requested for the referred server.
