Add `BIOSSettings` type and controller implementation (#267)
* Create CRD and Controller to handle bios settings

* fix lint and test failure

* Improvements to handle different cases during bios settings update

* Add missing templates from recent checkin

* Fix review comments

* Fix review comments

* Change resource name to biosmaintenance

* Fix minor review comments

* Fix missed bios to BIOS variable naming

* Change ServerMaintenancePolicyTemplate to serverMaintenancePolicy

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -31,6 +31,7 @@ rules:
 - apiGroups:
   - metal.ironcore.dev
   resources:
+  - biossettings
   - bmcs
   - bmcsecrets
   - endpoints
@@ -50,6 +51,7 @@ rules:
 - apiGroups:
   - metal.ironcore.dev
   resources:
+  - biossettings/finalizers
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - endpoints/finalizers
@@ -62,6 +64,7 @@ rules:
 - apiGroups:
   - metal.ironcore.dev
   resources:
+  - biossettings/status
   - bmcs/status
   - bmcsecrets/status
   - endpoints/status
