--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -26,3 +26,11 @@ resources:
 - servermaintenance_editor_role.yaml
 - servermaintenance_viewer_role.yaml
 
+# For each CRD, "Admin", "Editor" and "Viewer" roles are scaffolded by
+# default, aiding admins in cluster management. Those roles are
+# not used by the {{ .ProjectName }} itself. You can comment the following lines
+# if you do not want those helpers be installed with your Project.
+- biossettings_admin_role.yaml
+- biossettings_editor_role.yaml
+- biossettings_viewer_role.yaml
+
