--- a/config/crd/bases/metal.ironcore.dev_servermaintenancesets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servermaintenancesets.yaml
@@ -88,8 +88,7 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               template:
-                description: ServerMaintenanceSpec defines the desired state of a
-                  ServerMaintenance
+                description: Template specifies the template for the server maintenance.
                 properties:
                   policy:
                     description: Policy specifies the maintenance policy to be enforced
@@ -177,21 +176,28 @@ spec:
               ServerMaintenanceSet.
             properties:
               completed:
+                description: Completed is the total number of completed server maintenances
+                  in the set.
                 format: int32
                 type: integer
               failed:
+                description: Failed is the total number of failed server maintenances
+                  in the set.
                 format: int32
                 type: integer
               inMaintenance:
+                description: InMaintenance is the total number of server maintenances
+                  in the set that are currently in maintenance.
                 format: int32
                 type: integer
               maintenances:
-                description: |-
-                  INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
-                  Important: Run "make" to regenerate code after modifying this file
+                description: Maintenances is the number of server maintenances in
+                  the set.
                 format: int32
                 type: integer
               pending:
+                description: Pending is the total number of pending server maintenances
+                  in the set.
                 format: int32
                 type: integer
             type: object
