--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -32,6 +32,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings
+  - biosversions
   - bmcs
   - bmcsecrets
   - endpoints
@@ -52,6 +53,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings/finalizers
+  - biosversions/finalizers
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - endpoints/finalizers
@@ -65,6 +67,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings/status
+  - biosversions/status
   - bmcs/status
   - bmcsecrets/status
   - endpoints/status
