--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -52,22 +52,6 @@ spec:
           spec:
             description: BIOSSettingsSpec defines the desired state of BIOSSettings.
             properties:
-              biosSettings:
-                description: BIOSSettings specifies the BIOS settings for the selected
-                  serverRef or serverSelector.
-                properties:
-                  settings:
-                    additionalProperties:
-                      type: string
-                    description: SettingsMap contains bios settings as map
-                    type: object
-                  version:
-                    description: Version contains BIOS version this settings applies
-                      to
-                    type: string
-                required:
-                - version
-                type: object
               serverMaintenancePolicy:
                 description: ServerMaintenancePolicy is maintenance policy to be enforced
                   on the server.
@@ -134,6 +118,18 @@ spec:
                 x-kubernetes-validations:
                 - message: serverRef is immutable
                   rule: self == oldSelf
+              settings:
+                additionalProperties:
+                  type: string
+                description: 'SettingsMap contains software (eg: BIOS, BMC) settings
+                  as map'
+                type: object
+              version:
+                description: 'Version contains software (eg: BIOS, BMC) version this
+                  settings applies to'
+                type: string
+            required:
+            - version
             type: object
           status:
             description: BIOSSettingsStatus defines the observed state of BIOSSettings.
