--- a/config/samples/metal_v1alpha1_biossettings.yaml
+++ b/config/samples/metal_v1alpha1_biossettings.yaml
@@ -8,8 +8,7 @@ metadata:
 spec:
   serverRef:
     name: endpoint-sample-system-0
-  biosSettings:
-    version: 2.10.2
-    settings:
-      PxeDev1EnDis: Enabled
-  ServerMaintenancePolicyTemplate: OwnerApproval
+  version: 2.10.2
+  settings:
+    PxeDev1EnDis: Enabled
+  serverMaintenancePolicy: OwnerApproval
