Introduce `metal.ironcore.dev/reboot-needed` key
Introduce a `Server` reboot key constant which can be used as an
annotation key on a `Server` object to indicate that a `Server` needs a
reboot.

This key can be used upstream e.g. as `Node` label/annotation to
indicate the workload to perform a `Server` reboot.

--- a/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
@@ -70,7 +70,7 @@ spec:
                     description: Name specifies the name of the boot configuration.
                     type: string
                   spec:
-                    description: Parameters specifies the parameters to be used for
+                    description: Parameters specify the parameters to be used for
                       rendering the boot configuration.
                     properties:
                       ignitionSecretRef:
